--- a/Dockerfile.prow
+++ b/Dockerfile.prow
@@ -1,35 +1,10 @@
 # Copyright Contributors to the Open Cluster Management project
 
-FROM registry.ci.openshift.org/stolostron/builder:nodejs18-linux as frontend-packages
-WORKDIR /app/frontend
+FROM registry.ci.openshift.org/stolostron/builder:nodejs18-linux
+WORKDIR /app
 # Copy only package.json and package-lock.json so that the docker cache hash only changes if those change
 # This will cause the npm ci to only rerun if the package.json or package-lock.json changes
-COPY ./frontend/package.json ./frontend/package-lock.json ./
+COPY . ./
 RUN npm ci --no-optional --legacy-peer-deps
-COPY ./frontend .
 
-FROM frontend-packages as dynamic-plugin
-RUN npm run build:plugin:acm
-
-FROM registry.ci.openshift.org/stolostron/builder:nodejs18-linux as backend
-WORKDIR /app/backend
-# Copy only package.json and package-lock.json so that the docker layer cache only changes if those change
-# This will cause the npm ci to only rerun if the package.json or package-lock.json changes
-COPY ./backend/package.json ./backend/package-lock.json ./
-RUN npm ci --no-optional
-COPY ./backend .
-RUN npm run build
-
-FROM registry.ci.openshift.org/stolostron/builder:nodejs18-linux as production
-WORKDIR /app/backend
-COPY ./backend/package-lock.json ./backend/package.json ./
-RUN npm ci --no-optional --only=production
-
-FROM registry.ci.openshift.org/stolostron/common-nodejs-parent:nodejs-18
-WORKDIR /app
-ENV NODE_ENV production
-COPY --from=production /app/backend/node_modules ./node_modules
-COPY --from=backend /app/backend/backend.mjs ./
-COPY --from=dynamic-plugin /app/frontend/plugins/acm/dist ./public/plugin
-USER 1001
-CMD ["node", "backend.mjs"]
+CMD ["npm", "start"]
